// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header 1`] = `
<DocumentFragment>
  <header>
    <nav
      class="nav-tabs nav-tabs-lg"
    >
      <a
        class="pull-left special"
        href="#"
      >
        File
      </a>
      <a
        class=""
        href="#"
      >
        Capture
      </a>
      <a
        class=""
        href="#"
      >
        Flow List
      </a>
      <a
        class=""
        href="#"
      >
        Options
      </a>
      <a
        class="active"
        href="#"
      >
        Flow
      </a>
      <span
        class="connection-indicator established"
      >
        connected
      </span>
    </nav>
    <div>
      <div
        class="flow-menu"
      >
        <div
          class="menu-group"
        >
          <div
            class="menu-content"
          >
            <button
              class="btn btn-default"
              disabled=""
              title="[r]eplay flow"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-redo2 lucide-redo-2 icon icon-replay text-primary"
                fill="none"
                height="16"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m15 14 5-5-5-5"
                />
                <path
                  d="M20 9H9.5A5.5 5.5 0 0 0 4 14.5A5.5 5.5 0 0 0 9.5 20H13"
                />
              </svg>
               Replay
            </button>
            <button
              class="btn btn-default"
              title="[D]uplicate flow"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-copy-plus icon icon-duplicate text-info"
                fill="none"
                height="16"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <line
                  x1="15"
                  x2="15"
                  y1="12"
                  y2="18"
                />
                <line
                  x1="12"
                  x2="18"
                  y1="15"
                  y2="15"
                />
                <rect
                  height="14"
                  rx="2"
                  ry="2"
                  width="14"
                  x="8"
                  y="8"
                />
                <path
                  d="M4 16c-1.1 0-2-.9-2-2V4c0-1.1.9-2 2-2h10c1.1 0 2 .9 2 2"
                />
              </svg>
               Duplicate
            </button>
            <button
              class="btn btn-default"
              disabled=""
              title="revert changes to flow [V]"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-history icon icon-revert text-warning"
                fill="none"
                height="16"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M3 12a9 9 0 1 0 9-9 9.75 9.75 0 0 0-6.74 2.74L3 8"
                />
                <path
                  d="M3 3v5h5"
                />
                <path
                  d="M12 7v5l4 2"
                />
              </svg>
               Revert
            </button>
            <button
              class="btn btn-default"
              title="[d]elete flow"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-trash2 lucide-trash-2 icon icon-delete text-danger"
                fill="none"
                height="16"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M10 11v6"
                />
                <path
                  d="M14 11v6"
                />
                <path
                  d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6"
                />
                <path
                  d="M3 6h18"
                />
                <path
                  d="M8 6V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"
                />
              </svg>
               Delete
            </button>
            <a
              class=""
              href="#"
            >
              <button
                class="btn btn-default"
                title="mark flow"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-paintbrush icon icon-mark text-success"
                  fill="none"
                  height="16"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m14.622 17.897-10.68-2.913"
                  />
                  <path
                    d="M18.376 2.622a1 1 0 1 1 3.002 3.002L17.36 9.643a.5.5 0 0 0 0 .707l.944.944a2.41 2.41 0 0 1 0 3.408l-.944.944a.5.5 0 0 1-.707 0L8.354 7.348a.5.5 0 0 1 0-.707l.944-.944a2.41 2.41 0 0 1 3.408 0l.944.944a.5.5 0 0 0 .707 0z"
                  />
                  <path
                    d="M9 8c-1.804 2.71-3.97 3.46-6.583 3.948a.507.507 0 0 0-.302.819l7.32 8.883a1 1 0 0 0 1.185.204C12.735 20.405 16 16.792 16 15"
                  />
                </svg>
                 Mark▾
              </button>
            </a>
          </div>
          <div
            class="menu-legend"
          >
            Flow Modification
          </div>
        </div>
        <div
          class="menu-group"
        >
          <div
            class="menu-content"
          >
            <a
              class=""
              href="#"
            >
              <button
                class="btn btn-default"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-download icon icon-download"
                  fill="none"
                  height="16"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 15V3"
                  />
                  <path
                    d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"
                  />
                  <path
                    d="m7 10 5 5 5-5"
                  />
                </svg>
                 Download▾
              </button>
            </a>
            <a
              class=""
              href="#"
            >
              <button
                class="btn btn-default"
                title="Export flow."
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-file-output icon icon-export"
                  fill="none"
                  height="16"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M4.226 20.925A2 2 0 0 0 6 22h12a2 2 0 0 0 2-2V8a2.4 2.4 0 0 0-.706-1.706l-3.588-3.588A2.4 2.4 0 0 0 14 2H6a2 2 0 0 0-2 2v3.127"
                  />
                  <path
                    d="M14 2v5a1 1 0 0 0 1 1h5"
                  />
                  <path
                    d="m5 11-3 3"
                  />
                  <path
                    d="m5 17-3-3h10"
                  />
                </svg>
                 Export▾
              </button>
            </a>
          </div>
          <div
            class="menu-legend"
          >
            Export
          </div>
        </div>
        <div
          class="menu-group"
        >
          <div
            class="menu-content"
          >
            <button
              class="btn btn-default"
              disabled=""
              title="[a]ccept intercepted flow"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-play icon icon-resume text-success"
                fill="none"
                height="16"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M5 5a2 2 0 0 1 3.008-1.728l11.997 6.998a2 2 0 0 1 .003 3.458l-12 7A2 2 0 0 1 5 19z"
                />
              </svg>
               Resume
            </button>
            <button
              class="btn btn-default"
              disabled=""
              title="kill intercepted flow [x]"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-x icon icon-abort text-danger"
                fill="none"
                height="16"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M18 6 6 18"
                />
                <path
                  d="m6 6 12 12"
                />
              </svg>
               Abort
            </button>
          </div>
          <div
            class="menu-legend"
          >
            Interception
          </div>
        </div>
      </div>
    </div>
  </header>
</DocumentFragment>
`;

exports[`Header 2`] = `
<DocumentFragment>
  <header>
    <nav
      class="nav-tabs nav-tabs-lg"
    >
      <a
        class="pull-left special"
        href="#"
      >
        File
      </a>
      <a
        class=""
        href="#"
      >
        Capture
      </a>
      <a
        class=""
        href="#"
      >
        Flow List
      </a>
      <a
        class="active"
        href="#"
      >
        Options
      </a>
      <a
        class=""
        href="#"
      >
        Flow
      </a>
      <span
        class="connection-indicator established"
      >
        connected
      </span>
    </nav>
    <div>
      <div>
        <div
          class="menu-group"
        >
          <div
            class="menu-content"
          >
            <button
              class="btn btn-default"
              title="Open Options"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-settings icon icon-settings text-primary"
                fill="none"
                height="16"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M9.671 4.136a2.34 2.34 0 0 1 4.659 0 2.34 2.34 0 0 0 3.319 1.915 2.34 2.34 0 0 1 2.33 4.033 2.34 2.34 0 0 0 0 3.831 2.34 2.34 0 0 1-2.33 4.033 2.34 2.34 0 0 0-3.319 1.915 2.34 2.34 0 0 1-4.659 0 2.34 2.34 0 0 0-3.32-1.915 2.34 2.34 0 0 1-2.33-4.033 2.34 2.34 0 0 0 0-3.831A2.34 2.34 0 0 1 6.35 6.051a2.34 2.34 0 0 0 3.319-1.915"
                />
                <circle
                  cx="12"
                  cy="12"
                  r="3"
                />
              </svg>
               Edit Options
            </button>
          </div>
          <div
            class="menu-legend"
          >
            Options Editor
          </div>
        </div>
        <div
          class="menu-group"
        >
          <div
            class="menu-content"
          >
            <div
              class="menu-entry"
            >
              <label>
                <input
                  type="checkbox"
                />
                Strip cache headers 
                <a
                  class="docs-link"
                  href="https://docs.mitmproxy.org/stable/overview/features/#anticache"
                  rel="noreferrer"
                  target="_blank"
                >
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-circle-question-mark icon icon-help"
                    fill="none"
                    height="14"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="14"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <circle
                      cx="12"
                      cy="12"
                      r="10"
                    />
                    <path
                      d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3"
                    />
                    <path
                      d="M12 17h.01"
                    />
                  </svg>
                </a>
              </label>
            </div>
            <div
              class="menu-entry"
            >
              <label>
                <input
                  type="checkbox"
                />
                Use host header for display 
                <a
                  class="docs-link"
                  href="https://docs.mitmproxy.org/stable/concepts/options/#showhost"
                  rel="noreferrer"
                  target="_blank"
                >
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-circle-question-mark icon icon-help"
                    fill="none"
                    height="14"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="14"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <circle
                      cx="12"
                      cy="12"
                      r="10"
                    />
                    <path
                      d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3"
                    />
                    <path
                      d="M12 17h.01"
                    />
                  </svg>
                </a>
              </label>
            </div>
            <div
              class="menu-entry"
            >
              <label>
                <input
                  type="checkbox"
                />
                Don't verify server certificates 
                <a
                  class="docs-link"
                  href="https://docs.mitmproxy.org/stable/concepts/options/#ssl_insecure"
                  rel="noreferrer"
                  target="_blank"
                >
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-circle-question-mark icon icon-help"
                    fill="none"
                    height="14"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="14"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <circle
                      cx="12"
                      cy="12"
                      r="10"
                    />
                    <path
                      d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3"
                    />
                    <path
                      d="M12 17h.01"
                    />
                  </svg>
                </a>
              </label>
            </div>
          </div>
          <div
            class="menu-legend"
          >
            Quick Options
          </div>
        </div>
        <div
          class="menu-group"
        >
          <div
            class="menu-content"
          >
            <div
              class="menu-entry"
            >
              <label>
                <input
                  checked=""
                  type="checkbox"
                />
                Display Event Log
              </label>
            </div>
            <div
              class="menu-entry"
            >
              <label>
                <input
                  type="checkbox"
                />
                Display Command Bar
              </label>
            </div>
          </div>
          <div
            class="menu-legend"
          >
            View Options
          </div>
        </div>
      </div>
    </div>
  </header>
</DocumentFragment>
`;

exports[`Header 3`] = `
<DocumentFragment>
  <header>
    <nav
      class="nav-tabs nav-tabs-lg"
    >
      <a
        class="pull-left special open is-open"
        href="#"
      >
        File
      </a>
      <ul
        class="dropdown-menu is-open"
        style="position: absolute; left: 0px; top: 0px; transform: translate(0px, 0px);"
      >
        <li>
          <a
            href="#"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-folder-open icon icon-openFolder"
              fill="none"
              height="16"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m6 14 1.5-2.9A2 2 0 0 1 9.24 10H20a2 2 0 0 1 1.94 2.5l-1.54 6a2 2 0 0 1-1.95 1.5H4a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h3.9a2 2 0 0 1 1.69.9l.81 1.2a2 2 0 0 0 1.67.9H18a2 2 0 0 1 2 2v2"
              />
            </svg>
              Open...
            <input
              class="hidden"
              type="file"
            />
          </a>
        </li>
        <li>
          <a
            href="#"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-save icon icon-save"
              fill="none"
              height="16"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M15.2 3a2 2 0 0 1 1.4.6l3.8 3.8a2 2 0 0 1 .6 1.4V19a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2z"
              />
              <path
                d="M17 21v-7a1 1 0 0 0-1-1H8a1 1 0 0 0-1 1v7"
              />
              <path
                d="M7 3v4a1 1 0 0 0 1 1h7"
              />
            </svg>
             Save
          </a>
        </li>
        <li>
          <a
            href="#"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-save icon icon-save"
              fill="none"
              height="16"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M15.2 3a2 2 0 0 1 1.4.6l3.8 3.8a2 2 0 0 1 .6 1.4V19a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2z"
              />
              <path
                d="M17 21v-7a1 1 0 0 0-1-1H8a1 1 0 0 0-1 1v7"
              />
              <path
                d="M7 3v4a1 1 0 0 0 1 1h7"
              />
            </svg>
             Save filtered
          </a>
        </li>
        <li>
          <a
            href="#"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-trash2 lucide-trash-2 icon icon-delete"
              fill="none"
              height="16"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M10 11v6"
              />
              <path
                d="M14 11v6"
              />
              <path
                d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6"
              />
              <path
                d="M3 6h18"
              />
              <path
                d="M8 6V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"
              />
            </svg>
             Clear All
          </a>
        </li>
        <li
          class="menu-divider"
          role="separator"
        />
        <li>
          <a
            href="http://mitm.it/"
            rel="noreferrer"
            target="_blank"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-external-link icon icon-external"
              fill="none"
              height="16"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M15 3h6v6"
              />
              <path
                d="M10 14 21 3"
              />
              <path
                d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"
              />
            </svg>
             Install Certificates
          </a>
        </li>
      </ul>
      <a
        class=""
        href="#"
      >
        Capture
      </a>
      <a
        class=""
        href="#"
      >
        Flow List
      </a>
      <a
        class="active"
        href="#"
      >
        Options
      </a>
      <a
        class=""
        href="#"
      >
        Flow
      </a>
      <span
        class="connection-indicator established"
      >
        connected
      </span>
    </nav>
    <div>
      <div>
        <div
          class="menu-group"
        >
          <div
            class="menu-content"
          >
            <button
              class="btn btn-default"
              title="Open Options"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-settings icon icon-settings text-primary"
                fill="none"
                height="16"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M9.671 4.136a2.34 2.34 0 0 1 4.659 0 2.34 2.34 0 0 0 3.319 1.915 2.34 2.34 0 0 1 2.33 4.033 2.34 2.34 0 0 0 0 3.831 2.34 2.34 0 0 1-2.33 4.033 2.34 2.34 0 0 0-3.319 1.915 2.34 2.34 0 0 1-4.659 0 2.34 2.34 0 0 0-3.32-1.915 2.34 2.34 0 0 1-2.33-4.033 2.34 2.34 0 0 0 0-3.831A2.34 2.34 0 0 1 6.35 6.051a2.34 2.34 0 0 0 3.319-1.915"
                />
                <circle
                  cx="12"
                  cy="12"
                  r="3"
                />
              </svg>
               Edit Options
            </button>
          </div>
          <div
            class="menu-legend"
          >
            Options Editor
          </div>
        </div>
        <div
          class="menu-group"
        >
          <div
            class="menu-content"
          >
            <div
              class="menu-entry"
            >
              <label>
                <input
                  type="checkbox"
                />
                Strip cache headers 
                <a
                  class="docs-link"
                  href="https://docs.mitmproxy.org/stable/overview/features/#anticache"
                  rel="noreferrer"
                  target="_blank"
                >
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-circle-question-mark icon icon-help"
                    fill="none"
                    height="14"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="14"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <circle
                      cx="12"
                      cy="12"
                      r="10"
                    />
                    <path
                      d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3"
                    />
                    <path
                      d="M12 17h.01"
                    />
                  </svg>
                </a>
              </label>
            </div>
            <div
              class="menu-entry"
            >
              <label>
                <input
                  type="checkbox"
                />
                Use host header for display 
                <a
                  class="docs-link"
                  href="https://docs.mitmproxy.org/stable/concepts/options/#showhost"
                  rel="noreferrer"
                  target="_blank"
                >
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-circle-question-mark icon icon-help"
                    fill="none"
                    height="14"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="14"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <circle
                      cx="12"
                      cy="12"
                      r="10"
                    />
                    <path
                      d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3"
                    />
                    <path
                      d="M12 17h.01"
                    />
                  </svg>
                </a>
              </label>
            </div>
            <div
              class="menu-entry"
            >
              <label>
                <input
                  type="checkbox"
                />
                Don't verify server certificates 
                <a
                  class="docs-link"
                  href="https://docs.mitmproxy.org/stable/concepts/options/#ssl_insecure"
                  rel="noreferrer"
                  target="_blank"
                >
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-circle-question-mark icon icon-help"
                    fill="none"
                    height="14"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="14"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <circle
                      cx="12"
                      cy="12"
                      r="10"
                    />
                    <path
                      d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3"
                    />
                    <path
                      d="M12 17h.01"
                    />
                  </svg>
                </a>
              </label>
            </div>
          </div>
          <div
            class="menu-legend"
          >
            Quick Options
          </div>
        </div>
        <div
          class="menu-group"
        >
          <div
            class="menu-content"
          >
            <div
              class="menu-entry"
            >
              <label>
                <input
                  checked=""
                  type="checkbox"
                />
                Display Event Log
              </label>
            </div>
            <div
              class="menu-entry"
            >
              <label>
                <input
                  type="checkbox"
                />
                Display Command Bar
              </label>
            </div>
          </div>
          <div
            class="menu-legend"
          >
            View Options
          </div>
        </div>
      </div>
    </div>
  </header>
</DocumentFragment>
`;

exports[`Header 4`] = `
<DocumentFragment>
  <header>
    <nav
      class="nav-tabs nav-tabs-lg"
    >
      <a
        class="pull-left special"
        href="#"
      >
        File
      </a>
      <a
        class="active"
        href="#"
      >
        Capture
      </a>
      <a
        class=""
        href="#"
      >
        Flow List
      </a>
      <a
        class=""
        href="#"
      >
        Options
      </a>
      <a
        class=""
        href="#"
      >
        Flow
      </a>
      <span
        class="connection-indicator established"
      >
        connected
      </span>
    </nav>
    <div />
  </header>
</DocumentFragment>
`;
